<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />
            <CheckBox android:id="@+id/switcher_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_hotspot" />
            <CheckBox android:id="@+id/switcher_wifi_hotspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on" />
            <TextView android:id="@+id/wifi_hotspot_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_direct" />
            <CheckBox android:id="@+id/switcher_wifi_p2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on" />
            <TextView android:id="@+id/wifi_direct_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



        <ListView android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
